--- a/FreePIE.GUI/Shells/MainShellView.xaml
+++ b/FreePIE.GUI/Shells/MainShellView.xaml
@@ -1,10 +1,12 @@
-﻿<Window x:Class="FreePIE.GUI.Shells.MainShellView"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:cal="http://www.caliburnproject.org"
         xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         xmlns:xcad="http://schemas.xceed.com/wpf/xaml/avalondock"
         xmlns:avalonDock1="clr-namespace:FreePIE.GUI.Common.AvalonDock"
-        Title="FreePIE" Background="{DynamicResource WindowBackgroundBrush}">
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="FreePIE.GUI.Shells.MainShellView"
+        Title="FreePIE" Background="{DynamicResource WindowBackgroundBrush}" 
+        Width="780">
     <Window.Resources>
         <xcad:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
     </Window.Resources>
@@ -15,11 +17,11 @@
         </Grid.RowDefinitions>
         <ContentControl x:Name="Menu" Grid.Row="0"/>
         <xcad:DockingManager
-            x:Name="Manager"
-            AnchorablesSource="{Binding Tools}"
-            DocumentsSource="{Binding Scripts}"
-            ActiveContent="{Binding ActiveDocument, Mode=TwoWay}"
-            Grid.Row="1">
+			x:Name="Manager"
+			AnchorablesSource="{Binding Tools}"
+			DocumentsSource="{Binding Scripts}"
+			ActiveContent="{Binding ActiveDocument, Mode=TwoWay}"
+			Grid.Row="1">
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="DocumentClosed">
                     <cal:ActionMessage MethodName="DocumentClosed">
@@ -42,14 +44,14 @@
                     <Setter Property="IconSource" Value="{Binding Model.Icon}"/>
                     <Setter Property="IsActive" Value="{Binding Model.IsActive, Mode=TwoWay}"/>
                     <Setter Property="ContentId" Value="{Binding Model.ContentId}"/>
-                    <Setter Property="Visibility" Value="{Binding Model.IsVisible, Mode=TwoWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter={x:Static Visibility.Hidden}}"/>
+                    <Setter Property="Visibility" Value="{Binding Model.IsVisible, ConverterParameter={x:Static Visibility.Hidden}, Converter={StaticResource BoolToVisibilityConverter}, Mode=TwoWay}"/>
                 </Style>
             </xcad:DockingManager.LayoutItemContainerStyle>
             <xcad:DockingManager.LayoutItemTemplateSelector>
                 <avalonDock1:AutobinderTemplateSelector>
                     <avalonDock1:AutobinderTemplateSelector.Template>
                         <DataTemplate>
-                            <ContentControl cal:View.Model="{Binding . }" IsTabStop="False" />
+                            <ContentControl cal:View.Model="{Binding .}" IsTabStop="False" />
                         </DataTemplate>
                     </avalonDock1:AutobinderTemplateSelector.Template>
                 </avalonDock1:AutobinderTemplateSelector>
@@ -57,8 +59,7 @@
             <xcad:LayoutRoot>
                 <xcad:LayoutPanel Orientation="Vertical">
                     <xcad:LayoutDocumentPane/>
-                    <xcad:LayoutAnchorablePane DockHeight="150">
-                    </xcad:LayoutAnchorablePane>
+                    <xcad:LayoutAnchorablePane DockHeight="150"/>
                 </xcad:LayoutPanel>
             </xcad:LayoutRoot>
         </xcad:DockingManager>
